--- a/analyzer/src/main/resources/UserAgents/Robots.yaml
+++ b/analyzer/src/main/resources/UserAgents/Robots.yaml
@@ -340,6 +340,7 @@ config:
     - 'OperatingSystemClass                :   400011 :"Cloud"'
     - 'OperatingSystemName                 :   400011 :"Cloud"'
     - 'OperatingSystemVersion              :   400010 :"<<<null>>>"'
+    - 'OperatingSystemVersionMajor         :   400010 :"<<<null>>>"'
     - 'OperatingSystemNameVersion          :   400010 :"<<<null>>>"'
     - 'OperatingSystemNameVersionMajor     :   400010 :"<<<null>>>"'
     - 'LayoutEngineClass                   :   400011 :"Robot"'
@@ -368,6 +369,7 @@ config:
     - 'OperatingSystemClass                :   400011 :"Cloud"'
     - 'OperatingSystemName                 :   400011 :"Cloud"'
     - 'OperatingSystemVersion              :   400011 :"<<<null>>>"'
+    - 'OperatingSystemVersionMajor         :   400011 :"<<<null>>>"'
     - 'OperatingSystemNameVersion          :   400010 :"<<<null>>>"'
     - 'OperatingSystemNameVersionMajor     :   400010 :"<<<null>>>"'
     - 'LayoutEngineClass                   :   400011 :"Robot"'
@@ -393,6 +395,7 @@ config:
     - 'OperatingSystemClass                :   400010 :"Cloud"'
     - 'OperatingSystemName                 :   400010 :"Cloud"'
     - 'OperatingSystemVersion              :   400009 :"<<<null>>>"'
+    - 'OperatingSystemVersionMajor         :   400009 :"<<<null>>>"'
     - 'OperatingSystemNameVersion          :   400008 :"<<<null>>>"'
     - 'OperatingSystemNameVersionMajor     :   400008 :"<<<null>>>"'
     - 'LayoutEngineClass                   :   400010 :"Robot"'
@@ -420,6 +423,7 @@ config:
     - 'OperatingSystemClass                :   400010 :"Cloud"'
     - 'OperatingSystemName                 :   400010 :"Cloud"'
     - 'OperatingSystemVersion              :   400010 :"<<<null>>>"'
+    - 'OperatingSystemVersionMajor         :   400010 :"<<<null>>>"'
     - 'OperatingSystemNameVersion          :   400009 :"<<<null>>>"'
     - 'OperatingSystemNameVersionMajor     :   400009 :"<<<null>>>"'
     - 'LayoutEngineClass                   :   400010 :"Robot"'
@@ -445,6 +449,7 @@ config:
     - 'OperatingSystemClass                :   400010 :"Cloud"'
     - 'OperatingSystemName                 :   400010 :"Cloud"'
     - 'OperatingSystemVersion              :   400010 :"<<<null>>>"'
+    - 'OperatingSystemVersionMajor         :   400010 :"<<<null>>>"'
     - 'OperatingSystemNameVersion          :   400009 :"<<<null>>>"'
     - 'OperatingSystemNameVersionMajor     :   400009 :"<<<null>>>"'
     - 'LayoutEngineClass                   :   400010 :"Robot"'
@@ -13891,6 +13896,62 @@ config:
       AgentNameVersion                     : 'GPTBot 1.2'
       AgentNameVersionMajor                : 'GPTBot 1'
       AgentInformationUrl                  : 'https://openai.com/gptbot'
+
+
+- test:
+    input:
+      User-Agent                           : 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36; compatible; OAI-SearchBot/1.3; robots.txt; +https://openai.com/searchbot'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Openai OAI-SearchBot'
+      DeviceBrand                          : 'Openai'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Cloud'
+      OperatingSystemVersion               : '??'
+      OperatingSystemVersionMajor          : '??'
+      OperatingSystemNameVersion           : 'Cloud ??'
+      OperatingSystemNameVersionMajor      : 'Cloud ??'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'OAI-SearchBot'
+      LayoutEngineVersion                  : '1.3'
+      LayoutEngineVersionMajor             : '1'
+      LayoutEngineNameVersion              : 'OAI-SearchBot 1.3'
+      LayoutEngineNameVersionMajor         : 'OAI-SearchBot 1'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'OAI-SearchBot'
+      AgentVersion                         : '1.3'
+      AgentVersionMajor                    : '1'
+      AgentNameVersion                     : 'OAI-SearchBot 1.3'
+      AgentNameVersionMajor                : 'OAI-SearchBot 1'
+      AgentInformationUrl                  : 'https://openai.com/searchbot'
+
+
+- test:
+    input:
+      User-Agent                           : 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Safari/537.36; compatible; OAI-SearchBot/1.0; +https://openai.com/searchbot'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Openai OAI-SearchBot'
+      DeviceBrand                          : 'Openai'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Cloud'
+      OperatingSystemVersion               : '??'
+      OperatingSystemVersionMajor          : '??'
+      OperatingSystemNameVersion           : 'Cloud ??'
+      OperatingSystemNameVersionMajor      : 'Cloud ??'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'OAI-SearchBot'
+      LayoutEngineVersion                  : '1.0'
+      LayoutEngineVersionMajor             : '1'
+      LayoutEngineNameVersion              : 'OAI-SearchBot 1.0'
+      LayoutEngineNameVersionMajor         : 'OAI-SearchBot 1'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'OAI-SearchBot'
+      AgentVersion                         : '1.0'
+      AgentVersionMajor                    : '1'
+      AgentNameVersion                     : 'OAI-SearchBot 1.0'
+      AgentNameVersionMajor                : 'OAI-SearchBot 1'
+      AgentInformationUrl                  : 'https://openai.com/searchbot'
 
 
 - test:
