fix: Detect new Palo Alto Networks variant

--- a/analyzer/src/main/resources/UserAgents/Robots.yaml
+++ b/analyzer/src/main/resources/UserAgents/Robots.yaml
@@ -13101,44 +13101,65 @@ config:
     require:
     - 'agent.product.version.keyvalue.email="scaninfo@paloaltonetworks.com"'
     extract:
-    - 'DeviceClass                         :    10300 :"Robot"'
-    - 'DeviceName                          :    10300 :"Expanse Bot"'
-    - 'DeviceBrand                         :    10300 :"Palo Alto Networks"'
+    - 'DeviceClass                         :   320300 :"Robot"'
+    - 'DeviceName                          :   320300 :"Expanse Bot"'
+    - 'DeviceBrand                         :   320300 :"Palo Alto Networks"'
     - 'DeviceVersion                       :     1000 :"<<<null>>>"'
     - 'DeviceCpu                           :   100000 :"<<<null>>>"'
     - 'DeviceCpuBits                       :   100000 :"<<<null>>>"'
-    - 'OperatingSystemClass                :    10300 :"Cloud"'
-    - 'OperatingSystemName                 :    10300 :"Cloud"'
-    - 'OperatingSystemVersion              :    10300 :"<<<null>>>"'
-    - 'LayoutEngineClass                   :    10300 :"Robot"'
-    - 'LayoutEngineName                    :    10300 :"<<<null>>>"'
-    - 'LayoutEngineVersion                 :    10300 :"<<<null>>>"'
-    - 'AgentClass                          :    10300 :"Robot"'
-    - 'AgentName                           :    10300 :"Expanse Bot"'
-    - 'AgentVersion                        :    10300 :"<<<null>>>"'
-    - 'RemarkablePattern                   :    10300 :"<<<null>>>"'
+    - 'OperatingSystemClass                :   320300 :"Cloud"'
+    - 'OperatingSystemName                 :   320300 :"Cloud"'
+    - 'OperatingSystemVersion              :   320300 :"<<<null>>>"'
+    - 'LayoutEngineClass                   :   320300 :"Robot"'
+    - 'LayoutEngineName                    :   320300 :"<<<null>>>"'
+    - 'LayoutEngineVersion                 :   320300 :"<<<null>>>"'
+    - 'AgentClass                          :   320300 :"Robot"'
+    - 'AgentName                           :   320300 :"Expanse Bot"'
+    - 'AgentVersion                        :   320300 :"<<<null>>>"'
+    - 'RemarkablePattern                   :   320300 :"<<<null>>>"'
 
 
 - matcher:
     require:
     - 'agent.product.version.keyvalue.email="scaninfo@expanseinc.com"'
     extract:
-    - 'DeviceClass                         :    10300 :"Robot"'
-    - 'DeviceName                          :    10300 :"Expanse Bot"'
-    - 'DeviceBrand                         :    10300 :"Palo Alto Networks"'
+    - 'DeviceClass                         :   320300 :"Robot"'
+    - 'DeviceName                          :   320300 :"Expanse Bot"'
+    - 'DeviceBrand                         :   320300 :"Palo Alto Networks"'
     - 'DeviceVersion                       :     1000 :"<<<null>>>"'
     - 'DeviceCpu                           :   100000 :"<<<null>>>"'
     - 'DeviceCpuBits                       :   100000 :"<<<null>>>"'
-    - 'OperatingSystemClass                :    10300 :"Cloud"'
-    - 'OperatingSystemName                 :    10300 :"Cloud"'
-    - 'OperatingSystemVersion              :    10300 :"<<<null>>>"'
-    - 'LayoutEngineClass                   :    10300 :"Robot"'
-    - 'LayoutEngineName                    :    10300 :"<<<null>>>"'
-    - 'LayoutEngineVersion                 :    10300 :"<<<null>>>"'
-    - 'AgentClass                          :    10300 :"Robot"'
-    - 'AgentName                           :    10300 :"Expanse Bot"'
-    - 'AgentVersion                        :    10300 :"<<<null>>>"'
-    - 'RemarkablePattern                   :    10300 :"<<<null>>>"'
+    - 'OperatingSystemClass                :   320300 :"Cloud"'
+    - 'OperatingSystemName                 :   320300 :"Cloud"'
+    - 'OperatingSystemVersion              :   320300 :"<<<null>>>"'
+    - 'LayoutEngineClass                   :   320300 :"Robot"'
+    - 'LayoutEngineName                    :   320300 :"<<<null>>>"'
+    - 'LayoutEngineVersion                 :   320300 :"<<<null>>>"'
+    - 'AgentClass                          :   320300 :"Robot"'
+    - 'AgentName                           :   320300 :"Expanse Bot"'
+    - 'AgentVersion                        :   320300 :"<<<null>>>"'
+    - 'RemarkablePattern                   :   320300 :"<<<null>>>"'
+
+- matcher:
+    require:
+    - 'agent.text~"Palo Alto Networks"'
+    extract:
+    - 'DeviceClass                         :   320300 :"Robot"'
+    - 'DeviceName                          :   320300 :"Expanse Bot"'
+    - 'DeviceBrand                         :   320300 :"Palo Alto Networks"'
+    - 'DeviceVersion                       :     1000 :"<<<null>>>"'
+    - 'DeviceCpu                           :   100000 :"<<<null>>>"'
+    - 'DeviceCpuBits                       :   100000 :"<<<null>>>"'
+    - 'OperatingSystemClass                :   320300 :"Cloud"'
+    - 'OperatingSystemName                 :   320300 :"Cloud"'
+    - 'OperatingSystemVersion              :   320300 :"<<<null>>>"'
+    - 'LayoutEngineClass                   :   320300 :"Robot"'
+    - 'LayoutEngineName                    :   320300 :"<<<null>>>"'
+    - 'LayoutEngineVersion                 :   320300 :"<<<null>>>"'
+    - 'AgentClass                          :   320300 :"Robot"'
+    - 'AgentName                           :   320300 :"Expanse Bot"'
+    - 'AgentVersion                        :   320300 :"<<<null>>>"'
+    - 'RemarkablePattern                   :   320300 :"<<<null>>>"'
 
 
 # Expanse / Palo Alto Networks thinks it is a good idea to use this useragent ... #idiots
@@ -13222,6 +13243,34 @@ config:
       AgentVersionMajor                    : '??'
       AgentNameVersion                     : 'Expanse Bot ??'
       AgentNameVersionMajor                : 'Expanse Bot ??'
+
+# The idiots at Palo Alto Networks created a new nonsense useragent
+- test:
+    input:
+      User-Agent                           : 'Hello from Palo Alto Networks, find out more about our scans in https://docs-cortex.paloaltonetworks.com/r/1/Cortex-Xpanse/Scanning-activity'
+    expected:
+      DeviceClass                          : 'Robot'
+      DeviceName                           : 'Palo Alto Networks Expanse BOT'
+      DeviceBrand                          : 'Palo Alto Networks'
+      OperatingSystemClass                 : 'Cloud'
+      OperatingSystemName                  : 'Cloud'
+      OperatingSystemVersion               : '??'
+      OperatingSystemVersionMajor          : '??'
+      OperatingSystemNameVersion           : 'Cloud ??'
+      OperatingSystemNameVersionMajor      : 'Cloud ??'
+      LayoutEngineClass                    : 'Robot'
+      LayoutEngineName                     : 'Unknown'
+      LayoutEngineVersion                  : '??'
+      LayoutEngineVersionMajor             : '??'
+      LayoutEngineNameVersion              : 'Unknown ??'
+      LayoutEngineNameVersionMajor         : 'Unknown ??'
+      AgentClass                           : 'Robot'
+      AgentName                            : 'Expanse Bot'
+      AgentVersion                         : '??'
+      AgentVersionMajor                    : '??'
+      AgentNameVersion                     : 'Expanse Bot ??'
+      AgentNameVersionMajor                : 'Expanse Bot ??'
+      AgentInformationUrl                  : 'https://docs-cortex.paloaltonetworks.com/r/1/Cortex-Xpanse/Scanning-activity'
 
 
 # EdgeWatch is a platform that helps information accredited security practitioners discover, monitor, and analyze devices that are accessible from the Internet.
