--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <artifactId>yauaa-parent</artifactId>
   <packaging>pom</packaging>
   <groupId>nl.basjes.parse.useragent</groupId>
-  <version>8.0.1-SNAPSHOT</version>
+  <version>8.1.0</version>
 
   <name>Yauaa : </name>
   <description>A parsing and analyzing library to get information from a useragent string.</description>
@@ -46,7 +46,7 @@
     <snakeyaml.version>2.5</snakeyaml.version>
 
     <!-- Needed to make the build reproducible https://reproducible-builds.org/ -->
-    <project.build.outputTimestamp>2026-01-15T12:37:30Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2026-02-16T08:31:38Z</project.build.outputTimestamp>
 
     <!-- ============================================== -->
     <!-- ================ UDF Versions ================ -->
@@ -1003,7 +1003,7 @@
     <url>https://github.com/nielsbasjes/yauaa</url>
     <connection>scm:git:https://github.com/nielsbasjes/yauaa.git</connection>
     <developerConnection>scm:git:file:///${project.basedir}</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v8.1.0</tag>
   </scm>
 
 </project>
